--- a/calendar.scss
+++ b/calendar.scss
@@ -28,6 +28,8 @@
 	&-day {
 		border: 1px solid #bdbdbd;
 		cursor: pointer;
+		background: #f8f8f8;
+		height: 100px;
 		&.currentDay{
 			background: #E8F5E9;
 		}
@@ -62,4 +64,17 @@
 }
 .zero {
 	background: #faa089;
+}
+.another-month-day{
+	height: 100px;
+	border:1px solid #e4e2e2;
+	color: #bdbdbd;
+}
+
+.rate-button {
+	padding: 10px;
+	background: #e3e3e3;
+	border: unset;
+	cursor: pointer;
+	font-size: 16px;
 }
