--- a/css/calendar.css
+++ b/css/calendar.css
@@ -27,6 +27,8 @@
 .calendar-day {
   border: 1px solid #bdbdbd;
   cursor: pointer;
+  background: #f8f8f8;
+  height: 100px;
 }
 .calendar-day.currentDay {
   background: #E8F5E9;
@@ -60,6 +62,20 @@
 
 .zero {
   background: #faa089;
+}
+
+.another-month-day {
+  height: 100px;
+  border: 1px solid #e4e2e2;
+  color: #bdbdbd;
+}
+
+.rate-button {
+  padding: 10px;
+  background: #e3e3e3;
+  border: unset;
+  cursor: pointer;
+  font-size: 16px;
 }
 
 /*# sourceMappingURL=calendar.css.map */
