--- a/css/calendar.css
+++ b/css/calendar.css
@@ -1,6 +1,7 @@
 .calendar-wrap {
   padding: 20px;
   max-width: 1100px;
+  position: relative;
 }
 .calendar-block {
   text-align: end;
@@ -41,16 +42,13 @@
   font-weight: 600;
 }
 .calendar-day-block {
-  padding: 18px 4px;
-}
-.calendar-day-pm {
+  padding: 18px 15px;
   display: flex;
-  padding: 5px 10px;
   justify-content: space-between;
-  border-radius: 3px;
 }
 .calendar-set {
   display: flex;
+  align-items: center;
 }
 .calendar-border {
   margin: 2px 0;
@@ -59,9 +57,43 @@
 .calendar-week-day {
   padding: 10px 0;
 }
+.calendar-rate {
+  box-sizing: border-box;
+  height: 28px;
+}
+.calendar-rate-input {
+  height: 100%;
+}
+.calendar-day-rate {
+  position: absolute;
+  top: 135px;
+  right: 0;
+  padding: 10px;
+  border: 2px solid #808080;
+  border-radius: 3px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 150px;
+}
+.calendar-day-title {
+  padding: 10px;
+  font-size: 18px;
+}
+.calendar-day-button {
+  margin-top: 10px;
+}
+.calendar-input-label {
+  padding: 5px;
+  margin: 10px 0 0 0;
+}
 
 .zero {
   background: #faa089;
+}
+
+.hide {
+  display: none;
 }
 
 .another-month-day {
@@ -71,11 +103,12 @@
 }
 
 .rate-button {
-  padding: 10px;
+  padding: 5px;
   background: #e3e3e3;
   border: unset;
   cursor: pointer;
   font-size: 16px;
+  border-radius: 3px;
 }
 
 /*# sourceMappingURL=calendar.css.map */
