--- a/calendar.scss
+++ b/calendar.scss
@@ -2,6 +2,7 @@
 	&-wrap {
 		padding: 20px;
 		max-width: 1100px;
+		position: relative;
 	}
 	&-block {
 		text-align: end;
@@ -42,17 +43,14 @@
 			font-weight: 600;
 		}
 		&-block {
-			padding: 18px 4px;
-		}
-		&-pm {
+			padding: 18px 15px;
 			display: flex;
-			padding: 5px 10px;
 			justify-content: space-between;
-			border-radius: 3px;
 		}
 	}
 	&-set{
 		display: flex;
+		align-items: center;
 	}
 	&-border {
 		margin: 2px 0;
@@ -61,10 +59,50 @@
 	&-week-day {
 		padding: 10px 0;
 	}
+	&-rate{
+		box-sizing: border-box;
+		height: 28px;
+		&-input{
+			height: 100%;
+		}
+	}
+	&-day {
+		&-rate{
+			position: absolute;
+			top: 135px;
+			right: 0;
+			padding: 10px;
+			border: 2px solid #808080 ;
+			border-radius: 3px;
+			display: flex;
+			flex-direction: column;
+			justify-content: center;
+			width: 150px;
+		}
+		&-title{
+			padding: 10px ;
+			font-size: 18px;
+		}
+		&-button{
+			margin-top: 10px;
+		}
+
+
+	}
+	&-input{
+		&-label{
+			padding: 5px;
+			margin: 10px 0 0 0;
+		}
+	}
 }
 .zero {
 	background: #faa089;
 }
+.hide {
+	display: none;
+}
+
 .another-month-day{
 	height: 100px;
 	border:1px solid #e4e2e2;
@@ -72,9 +110,10 @@
 }
 
 .rate-button {
-	padding: 10px;
+	padding: 5px;
 	background: #e3e3e3;
 	border: unset;
 	cursor: pointer;
 	font-size: 16px;
+	border-radius: 3px;
 }
