--- a/css/result.css
+++ b/css/result.css
@@ -97,6 +97,9 @@
   border-left: none;
   border-right: none;
 }
+.result-tr:last-child {
+  padding-left: 5px;
+}
 .result-sticky-button {
   position: sticky;
   top: 125px;
@@ -145,6 +148,10 @@
 
 .b0 {
   border: none;
+}
+
+.result-tr td:last-child {
+  padding-left: 5px;
 }
 
 .inventory-row td {
