update too current version

--- a/css/orders.css
+++ b/css/orders.css
@@ -10,7 +10,7 @@
   padding-top: 30px;
 }
 .orders-table {
-  width: 65%;
+  width: 80%;
   background: #f8f8f8;
   border: 1px solid #bdbdbd;
   border-collapse: collapse;
@@ -23,13 +23,14 @@
 }
 .orders-table tr, .orders-table td {
   font-size: 18px;
-  padding: 5px;
+  padding: 10px;
 }
 .orders-table tr a, .orders-table td a {
   text-decoration: underline;
 }
 .orders-header {
   font-size: 26px;
+  margin-bottom: 10px;
 }
 
 .completed {
@@ -38,6 +39,10 @@
 
 .accepted {
   background: #fbff002e;
+}
+
+.filter-label {
+  margin-right: 5px;
 }
 
 /*# sourceMappingURL=orders.css.map */
