--- a/calendar.scss
+++ b/calendar.scss
@@ -1,22 +1,50 @@
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap");
+
+.body{
+	font-family: "Quicksand", sans-serif;;
+}
+
 .calendar {
 	&-wrap {
-		padding: 20px;
+		color: #000000;
+		padding: 10px;
 		max-width: 1100px;
 		position: relative;
+		&.wrap-small {
+			position: absolute;
+			z-index: 5;
+			top: 85px;
+			left: -25px;
+			border: 1px solid #bdbdbd;
+			border-radius: 10px;
+			background: #ffffff;
+			&.modal-calendar{
+				top: 0;
+				right: 0;
+				left:unset;
+			}
+		}
 	}
 	&-block {
-		text-align: end;
+		text-align: center;
 		display: grid;
 		grid-template-columns: repeat(7, minmax(50px, 120px));
 		grid-gap: 1px;
+		&.block-small{
+			grid-template-columns: repeat(7, minmax(30px, 30px));
+		}
 	}
+
 	&-month{
 		display: flex;
 		justify-content: space-between;
 		width: 215px;
 		margin: 0 auto 30px;
+		&.month-small{
+			margin: 0;
+		}
 		&-prev,&-next{
-			font-size: 22px;
+			font-size:  22px;
 			cursor: pointer;
 			&:hover{
 				color: #4CAF50;
@@ -24,13 +52,22 @@
 		}
 		&-text{
 			padding: 0 40px;
+			&.text-small{
+				padding: 0;
+			}
 		}
 	}
 	&-day {
+		text-align: end;
 		border: 1px solid #bdbdbd;
-		cursor: pointer;
+		border-radius: 10px;
 		background: #f8f8f8;
 		height: 100px;
+		cursor: pointer;
+		margin: 0.5px;
+		&:hover {
+			background: #fff7d8;
+		}
 		&.currentDay{
 			background: #E8F5E9;
 		}
@@ -40,12 +77,25 @@
 
 		&-number {
 			padding: 5px 10px 15px;
+			font-size: 18px;
 			font-weight: 600;
+			position: relative;
+			z-index: 5;
+			&.day-number-small{
+				font-size: 14px;
+				padding: 0;
+			}
 		}
 		&-block {
 			padding: 18px 15px;
 			display: flex;
 			justify-content: space-between;
+		}
+		&.day-small{
+			height: 30px;
+			display: flex;
+			justify-content: center;
+			align-items: center;
 		}
 	}
 	&-set{
@@ -73,7 +123,7 @@
 			right: 0;
 			padding: 10px;
 			border: 2px solid #808080 ;
-			border-radius: 3px;
+			border-radius: 10px;
 			display: flex;
 			flex-direction: column;
 			justify-content: center;
@@ -105,8 +155,13 @@
 
 .another-month-day{
 	height: 100px;
+	margin: 0.5px;
 	border:1px solid #e4e2e2;
+	border-radius: 10px;
 	color: #bdbdbd;
+	&.another-small{
+		height: 30px;
+	}
 }
 
 .rate-button {
@@ -116,4 +171,70 @@
 	cursor: pointer;
 	font-size: 16px;
 	border-radius: 3px;
+}
+.tooltip {
+	position: relative;
+	display: inline-block;
+}
+.tooltip .tooltiptext {
+	visibility: hidden;
+	width: 120px;
+	font-size: 12px;
+	background-color: #5a5a5a;
+	color: #fff;
+	text-align: center;
+	padding: 5px 0;
+	border-radius: 6px;
+	position: absolute;
+	z-index: 6;
+	bottom: 32px;
+	left: 50%;
+	margin-left: -60px;
+}
+
+.tooltip:hover .tooltiptext {
+	visibility: visible;
+}
+.storage-month{
+	display: flex;
+	justify-content: space-between;
+	width: 215px;
+	margin: 0 auto 30px;
+		margin: 0;
+}
+.storage-day{
+	text-align: end;
+	border: 1px solid #bdbdbd;
+	border-radius: 10px;
+	background: #f8f8f8;
+	height: 100px;
+	cursor: pointer;
+	margin: 0.5px;
+	&.day-small{
+		height: 30px;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+	}
+	&:hover {
+		background: #fff7d8;
+	}
+	&.currentDay{
+		background: #E8F5E9;
+	}
+	&.selected {
+		background: #ffe8c5;
+	}
+}
+.calendar-wrap.storage-wrap.wrap-small{
+	top: -100px;
+	right: -50px;
+	left: unset;
+}
+.inactive{
+	background: #b5b5b5;
+	cursor: default;
+	&:hover{
+		background: #b5b5b5;
+	}
 }
