--- a/css/calculator.css
+++ b/css/calculator.css
@@ -65,7 +65,7 @@
 .size-text,
 .date-text {
 	font-size: 12px;
-	margin: 15px 0 5px 18px;
+	margin: 15px 0 5px 0px;
 }
 .date-text {
 	margin-left: 0px;
@@ -77,16 +77,21 @@
 	display: inline-block;
 }
 .input-date {
-	width: 30%;
+	width: 100%;
+	display: flex;
+	align-items: flex-end;
 }
 .date-input {
 	cursor: pointer;
 	height: 47px;
-	width: 100%;
 	border: 1px solid #d6d6d6;
+	border-radius: 3px;
 	font-size: 1rem;
-	padding-left: 40px;
+	padding-left: 50px;
 	box-sizing: border-box;
+	position: relative;
+	z-index: 5;
+	background: transparent;
 }
 .house-icon {
 	top: 43px;
@@ -97,7 +102,7 @@
 	top: 43px;
 }
 .input-size {
-	width: 60%;
+	width: 50%;
 }
 .size-choice,
 .date-choice,
@@ -106,7 +111,7 @@
 	background: #fff;
 	border: 1px solid #d6d6d6;
 	border-radius: 3px;
-	padding-left: 42px;
+	padding-left: 50px;
 	cursor: pointer;
 }
 .date-choice {
@@ -146,6 +151,9 @@
 }
 .size-choice {
 	font-weight: 200;
+	position: relative;
+	z-index: 5;
+	background: transparent;
 }
 .dropdown-size {
 	display: none;
@@ -267,13 +275,6 @@
 .storage-date-icon {
 	top: 10px;
 	left: 12px;
-}
-.progress {
-	border-image: linear-gradient(to left, rgb(40, 175, 232), rgba(0, 0, 0, 0)) 1 10% / 1 / 0 stretch;
-	border-bottom: 2px solid rgb(40, 175, 232);
-	box-shadow: rgba(0, 0, 0, 0.06) 0px 0.2rem 0.4rem 0px;
-
-	background: #fff;
 }
 .container-desktop {
 	max-width: 1200px;
@@ -663,11 +664,16 @@
 .detail-stairs {
 	font-size: 14px;
 	width: 60%;
-	padding: 5px 10px;
+	padding: 4px 10px;
 	border-width: 1px;
 	border-style: solid;
 	border-color: #d6d6d6;
 	border-radius: 2px;
+}
+.date{
+	width: 40%;
+	position: relative;
+
 }
 .detail-apt {
 	width: 20%;
@@ -675,7 +681,8 @@
 }
 .detail-stairs {
 	margin-top: 0;
-	width: 65%;
+	width: 50%;
+	padding: 5px;
 }
 .details-add-sets {
 	display: flex;
@@ -739,4 +746,90 @@
 }
 .size-and-date-block {
 	margin-top: 0;
+	flex-direction: column;
+}
+.size-and-date-wrap{
+	display: flex;
+	justify-content: space-between;
+	width: 100%;
+
+}
+.arrival-time{
+	width: 50%;
+}
+.arrival-time-wrap{
+	position: relative;
+	display: flex;
+	border: 1px solid #d6d6d6;
+	border-radius: 3px;
+	height: 45px;
+}
+.arrival-time-block{
+	display: flex;
+	position: relative;
+	width: 25%;
+	border-right: 1px solid #d6d6d6;
+	justify-content: center;
+	align-items: flex-end;
+	padding: 2px;
+	cursor: pointer;
+}
+.arrival-time-block.last{
+	border-right: none;
+}
+.arrival-time-text{
+	font-size: 10px;
+	color: #838687;
+}
+.arrival-input{
+	display: none;
+}
+.dot{
+	display: inline-block;
+	position: absolute;
+	width: 3px;
+	height: 3px;
+	top: 40%;
+	left: 0px;
+	right: 0px;
+	margin: 0px auto;
+	background-color: rgb(131, 134, 135);
+	border-radius: 100%;
+}
+.selected {
+	background: #d6d6d691;
+}
+.clock{
+	width: 22px;
+	height: 22px;
+	position: absolute;
+	top: 4.5px;
+	left: 17px;
+	border: 1px solid rgba(52, 119, 181, 0.9);
+	border-radius: 12px;
+	z-index: 5;
+	background: white;
+	cursor: pointer;
+}
+.dial{
+	background-color: rgba(52, 119, 181, 0.9);
+	width: 2px;
+	height: 6px;
+	position: absolute;
+	top: 5px;
+	left: 50%;
+	margin: auto -1px;
+	transform-origin: 50% 100%;
+}
+.dial2{
+	transform: rotate(240deg);
+}
+.dial3{
+	transform: rotate(270deg);
+}
+.dial4{
+	transform: rotate(90deg);
+}
+.dial5{
+	transform: rotate(120deg);
 }
