--- a/css/footer.css
+++ b/css/footer.css
@@ -16,6 +16,7 @@
   width: 25%;
   display: flex;
   flex-direction: column;
+  padding: 0 10px;
 }
 
 .footer-item {
@@ -104,6 +105,12 @@
   border-radius: 2px;
   background: #34b57b;
   border: 2px #34b57b solid;
+}
+
+@media screen and (max-width: 1225px) {
+  .footer-container {
+    justify-content: space-around;
+  }
 }
 
 /*# sourceMappingURL=footer.css.map */
