--- a/footer.scss
+++ b/footer.scss
@@ -1,95 +1,99 @@
 @import "fonts.css";
 
-.footer-container{
-  display: flex;
-  justify-content: space-between;
-  max-width: 1200px;
-  margin: 0 auto;
+.footer-container {
+	display: flex;
+	justify-content: space-between;
+	max-width: 1200px;
+	margin: 0 auto;
 }
-.long-footer{
-  padding: 30px 0;
-  color: #ffffff;
-  background: #000000
+.long-footer {
+	padding: 30px 0;
+	color: #ffffff;
+	background: #000000;
 }
-.footer-col{
-  width: 25%;
-  display: flex;
-  flex-direction: column;
-
+.footer-col {
+	width: 25%;
+	display: flex;
+	flex-direction: column;
+	padding: 0 10px;
 }
-.footer-item{
-  display: flex;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  border-bottom: 1px #ffffff solid;
+.footer-item {
+	display: flex;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	border-bottom: 1px #ffffff solid;
 }
-.footer-title{
-  font-size: 24px;
-  color: #ffffff;
-  font-family: "Stylish";
-  font-weight: 400;
-  padding: 10px 0 17px 0;
+.footer-title {
+	font-size: 24px;
+	color: #ffffff;
+	font-family: "Stylish";
+	font-weight: 400;
+	padding: 10px 0 17px 0;
 }
-.footer-icon{
-
-    fill: #ffffff;
-  width: 20px;
+.footer-icon {
+	fill: #ffffff;
+	width: 20px;
 }
-.footer-item-text{
-  text-decoration: none;
-  color: #ffffff;
-  font-size: 14px;
-  padding-left: 10px;
-  line-height: 18px;
+.footer-item-text {
+	text-decoration: none;
+	color: #ffffff;
+	font-size: 14px;
+	padding-left: 10px;
+	line-height: 18px;
 }
-.footer-item-icon{
-  height: 20px;
+.footer-item-icon {
+	height: 20px;
 }
-.phone{
-  font-size: 16px;
+.phone {
+	font-size: 16px;
 }
-.social{
-  padding-top: 30px;
+.social {
+	padding-top: 30px;
 }
-.footer-social{
-  display: flex;
+.footer-social {
+	display: flex;
 }
-.social-svg{
-  margin-right: 20px;
-  fill: #ffffff;
-  width: 40px;
-  height: 40px;
-  transition: 0.15s linear;
-  &:hover {
-    fill:#3477b5e6;
-  }
+.social-svg {
+	margin-right: 20px;
+	fill: #ffffff;
+	width: 40px;
+	height: 40px;
+	transition: 0.15s linear;
+	&:hover {
+		fill: #3477b5e6;
+	}
 }
-.footer-input{
-  border-radius: 4px ;
-  padding: 2px 5px;
-  width: 100%;
-  font-size: 14px;
-  background: #000000;
-  border: 1px #ffffff solid;
-  color: #ffffff;
-  &::placeholder{
-    color:#ffffff;
-  }
+.footer-input {
+	border-radius: 4px;
+	padding: 2px 5px;
+	width: 100%;
+	font-size: 14px;
+	background: #000000;
+	border: 1px #ffffff solid;
+	color: #ffffff;
+	&::placeholder {
+		color: #ffffff;
+	}
 }
-.input-message{
-  height: 80px;
+.input-message {
+	height: 80px;
 }
-.submit-button{
-  margin: 20px 0;
-  & button{
-    transition: 0.15s linear;
-    font-size: 14px;
-    padding: 10px 20px;
-    cursor: pointer;
-  }
+.submit-button {
+	margin: 20px 0;
+	& button {
+		transition: 0.15s linear;
+		font-size: 14px;
+		padding: 10px 20px;
+		cursor: pointer;
+	}
 }
 .send {
-  border-radius: 2px;
-  background: #34b57b;
-  border: 2px #34b57b solid;
+	border-radius: 2px;
+	background: #34b57b;
+	border: 2px #34b57b solid;
+}
+@media screen and(max-width:1225px) {
+	.footer-container {
+		justify-content: space-around;
+	}
 }
