--- a/css/long.css
+++ b/css/long.css
@@ -72,4 +72,21 @@
   color: #161616;
 }
 
+@media screen and (max-width: 925px) {
+  .long-text {
+    font-size: 16px;
+    line-height: 30px;
+  }
+
+  .long-title {
+    font-size: 32px;
+    margin-top: 28px;
+  }
+
+  .container.long {
+    text-align: center;
+    max-width: 740px;
+  }
+}
+
 /*# sourceMappingURL=long.css.map */
