--- a/orders.scss
+++ b/orders.scss
@@ -44,3 +44,66 @@
 .filter-label{
   margin-right: 5px;
 }
+@media screen and (max-width: 700px) {
+  body {
+    background: #ffffff;
+  }
+  .orders-wrap {
+    padding: 10px;
+  }
+  .orders-header {
+    margin: 10px 0;
+    font-size: 20px;
+  }
+  .filter-orders{
+    display: flex;
+    align-items: baseline;
+  }
+  .orders-list, .orders-wrap {
+    padding-top: 10px;
+  }
+  .orders-table {
+    width: 100%;
+    border:unset;
+  }
+  .orders-table tr, .orders-table td {
+    font-size: 14px;
+    padding: 10px;
+    margin: 2px 0px;
+    border-radius: 3px;
+  }
+  table, thead, tbody, th, td, tr {
+    display: block;
+  }
+  .orders-table-tr {
+    border-radius: 3px;
+    position: absolute;
+    top: -9999px;
+    left: -9999px;
+  }
+  .orders-table tr td {
+    /* Behave  like a "row" */
+    border: none;
+    border-bottom: 1px solid #eee;
+    position: relative;
+    padding-left: 50%;
+  }
+  td:before {
+    /* Now like a table header */
+    position: absolute;
+    /* Top/left values mimic padding */
+    top: 6px;
+    left: 6px;
+    width: 45%;
+    padding-right: 10px;
+    white-space: nowrap;
+  }
+  td:nth-of-type(1):before { content: "Order №"; }
+  td:nth-of-type(2):before { content: "Name"; }
+  td:nth-of-type(3):before { content: "Phone"; }
+  td:nth-of-type(4):before { content: "Move Date"; }
+  td:nth-of-type(5):before { content: "Distance"; }
+  td:nth-of-type(6):before { content: "Volume"; }
+  td:nth-of-type(7):before { content: "Price"; }
+  td:nth-of-type(8):before { content: "Status"; }
+}
