--- a/css/footer.css
+++ b/css/footer.css
@@ -112,5 +112,37 @@
     justify-content: space-around;
   }
 }
+@media screen and (max-width: 700px) {
+  .footer-col {
+    margin-top: 20px;
+    width: unset;
+  }
+
+  .footer-title {
+    align-self: center;
+  }
+
+  .footer-contact {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .submit-button {
+    text-align: center;
+  }
+
+  .footer-container {
+    flex-direction: column;
+  }
+
+  .long-footer {
+    padding: 0;
+  }
+
+  .contact-us {
+    align-items: normal;
+  }
+}
 
 /*# sourceMappingURL=footer.css.map */
