--- a/css/header.css
+++ b/css/header.css
@@ -8,6 +8,10 @@ body {
   margin: 0 auto;
 }
 
+.hide {
+  display: none;
+}
+
 .header {
   display: flex;
   justify-content: space-between;
@@ -121,6 +125,84 @@ body {
 @media screen and (max-width: 780px) {
   .header-logo img {
     height: 70px;
+  }
+}
+@media screen and (max-width: 700px) {
+  .header-logo img {
+    height: 55px;
+  }
+
+  .header-nav-wrap {
+    position: absolute;
+    left: -100%;
+    transition: 0.3s;
+    top: 59px;
+  }
+  .header-nav-wrap.visible {
+    left: 0;
+  }
+
+  .nav-menu {
+    position: absolute;
+    background: #ffffff;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    z-index: 4;
+  }
+
+  .nav-list {
+    flex-direction: column;
+  }
+
+  .nav-item {
+    height: unset;
+  }
+
+  .nav-link {
+    padding: 15px 40px;
+    color: #000000;
+    font-weight: normal;
+    border-bottom: 3px #14b5f0 solid;
+  }
+
+  .header .menu__icon {
+    display: block;
+    position: absolute;
+    width: 25px;
+    height: 18px;
+    cursor: pointer;
+    z-index: 5;
+    top: 20px;
+    left: 10px;
+  }
+  .header .menu__icon span {
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    background-color: #ffffff;
+    top: 8px;
+  }
+  .header .menu__icon span:nth-child(n) {
+    transition: all 0.2s ease-out;
+  }
+  .header .menu__icon span:first-child {
+    top: 0;
+  }
+  .header .menu__icon span:last-child {
+    top: auto;
+    bottom: 0;
+  }
+  .header .menu__icon.clicked :nth-child(2) {
+    opacity: 0;
+  }
+  .header .menu__icon.clicked :nth-child(1) {
+    transform: rotate(45deg);
+    top: 8px;
+  }
+  .header .menu__icon.clicked :nth-child(3) {
+    transform: rotateZ(-45deg);
+    top: 8px;
   }
 }
 
