--- a/css/profile.css
+++ b/css/profile.css
@@ -1,155 +1,196 @@
 @import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap");
 :root {
-	--first-color: #12192c;
-	--second-color: #f5a623;
-	--white-color: #ededed;
+  --first-color: #12192c;
+  --second-color: #f5a623;
+  --white-color: #ededed;
 }
 
 :root {
-	--body-font: "Quicksand", sans-serif;
-	--small-font-size: 0.875rem;
+  --body-font: "Quicksand", sans-serif;
+  --small-font-size: 0.875rem;
 }
 @media screen and (min-width: 768px) {
-	:root {
-		--small-font-size: 0.938rem;
-	}
+  :root {
+    --small-font-size: 0.938rem;
+  }
 }
 
 :root {
-	--z-back: -10;
-	--z-normal: 1;
-	--z-tooltip: 10;
-	--z-fixed: 100;
-	--z-modal: 1000;
+  --z-back: -10;
+  --z-normal: 1;
+  --z-tooltip: 10;
+  --z-fixed: 100;
+  --z-modal: 1000;
 }
 
 *,
 ::before,
 ::after {
-	box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-	position: relative;
-	margin: 0;
-	padding: 1rem 0 0 5rem;
-	font-family: var(--body-font);
-
-	transition: 0.5s;
+  position: relative;
+  margin: 0;
+  padding: 1rem 0 0 5rem;
+  font-family: var(--body-font);
+  background-color: var(--white-color);
+  transition: 0.5s;
 }
 
 h1 {
-	margin: 0;
+  margin: 0;
 }
 
 ul,
 li {
-	margin: 0;
-	padding: 0;
-	list-style: none;
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
 
 a {
-	text-decoration: none;
+  text-decoration: none;
 }
 
 .l-navbar {
-	position: fixed;
-	top: 0;
-	left: 0;
-	width: 56px;
-	height: 100vh;
-	background-color: var(--first-color);
-	padding: 1.25rem 0.5rem 2rem;
-	z-index: var(--z-fixed);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 56px;
+  height: 100vh;
+  background-color: var(--first-color);
+  padding: 1.25rem 0.5rem 2rem;
+  z-index: 2;
 }
 
 .nav {
-	height: 100%;
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
-	overflow: hidden;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  overflow: hidden;
 }
 .nav__logo {
-	display: flex;
-	align-items: center;
-	margin-bottom: 2rem;
-	padding: 0 0.5rem;
+  display: flex;
+  align-items: center;
+  margin-bottom: 2rem;
+  padding: 0 0.5rem;
 }
 .nav__logo-icon {
-	margin-right: 1.2rem;
+  margin-right: 1.2rem;
 }
 .nav__logo-text {
-	color: var(--white-color);
-	font-weight: 700;
+  color: var(--white-color);
+  font-weight: 700;
 }
 .nav__toggle {
-	position: absolute;
-	top: 1.1rem;
-	right: -0.6rem;
-	width: 18px;
-	height: 18px;
-	background-color: var(--second-color);
-	border-radius: 50%;
-	font-size: 1.25rem;
-	color: var(--first-color);
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	cursor: pointer;
-	transition: 0.5s;
+  position: absolute;
+  top: 1.1rem;
+  right: -0.6rem;
+  width: 18px;
+  height: 18px;
+  background-color: var(--second-color);
+  border-radius: 50%;
+  font-size: 1.25rem;
+  color: var(--first-color);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  transition: 0.5s;
 }
 .nav__link {
-	display: flex;
-	align-items: center;
-	padding: 0.5rem;
-	margin-bottom: 1rem;
-	border-radius: 0.5rem;
-	color: var(--white-color);
-	transition: 0.3s;
+  display: flex;
+  align-items: center;
+  padding: 0.5rem;
+  margin-bottom: 1rem;
+  border-radius: 0.5rem;
+  color: var(--white-color);
+  transition: 0.3s;
 }
 .nav__link:hover {
-	background: var(--second-color);
-	color: var(--first-color);
+  background: var(--second-color);
+  color: var(--first-color);
 }
 .nav__icon {
-	font-size: 1.5rem;
-	margin-right: 1rem;
+  font-size: 1.5rem;
+  margin-right: 1rem;
 }
 .nav__text {
-	font-weight: 700;
+  font-weight: 700;
 }
 
 .show {
-	width: 168px;
+  width: 224px;
 }
 
 .rotate {
-	transform: rotate(180deg);
-	transition: 0.25s;
+  transform: rotate(180deg);
+  transition: 0.25s;
 }
 
 .expander {
-	padding: 1rem 0 0 12rem;
+  padding: 1rem 0 0 12rem;
 }
 
 .active {
-	background-color: var(--second-color);
-	color: var(--first-color);
+  background-color: var(--second-color);
+  color: var(--first-color);
 }
 
 .setting {
-	margin-top: 5%;
-	margin-left: 10%;
+  margin: 55px 5px;
 }
 .setting-title {
-	margin: 15px 5px;
-	font-size: 18px;
+  margin: 15px 5px;
+  font-size: 18px;
 }
 .setting-form {
-	box-shadow: rgba(0, 0, 0, 0.2) 0px 3px 3px -2px, rgba(0, 0, 0, 0.14) 0px 3px 4px 0px,
-		rgba(0, 0, 0, 0.12) 0px 1px 8px 0px;
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 3px 3px -2px, rgba(0, 0, 0, 0.14) 0px 3px 4px 0px, rgba(0, 0, 0, 0.12) 0px 1px 8px 0px;
+}
+
+@media screen and (max-width: 700px) {
+  body {
+    padding: 0;
+  }
+
+  .header {
+    position: relative;
+    z-index: 12;
+  }
+
+  .nav__toggle {
+    display: none;
+  }
+
+  .l-navbar {
+    left: -56px;
+    transition: 0.2s;
+  }
+
+  .show {
+    left: 0;
+  }
+
+  #body .header .menu__icon {
+    left: 15px;
+    top: 15px;
+    transition: 0.2s;
+  }
+  #body .header .menu__icon span {
+    background-color: #000000;
+  }
+  #body .header .menu__icon.clicked {
+    left: 190px;
+  }
+  #body .header .menu__icon.clicked span {
+    background-color: #ffffff;
+  }
+
+  .nav__logo {
+    margin: 10px 0;
+  }
 }
 
 /*# sourceMappingURL=profile.css.map */
