--- a/footer.scss
+++ b/footer.scss
@@ -92,8 +92,34 @@
 	background: #34b57b;
 	border: 2px #34b57b solid;
 }
-@media screen and(max-width:1225px) {
+@media screen and (max-width:1225px) {
 	.footer-container {
 		justify-content: space-around;
+	}
+}
+@media screen and (max-width: 700px) {
+	.footer-col{
+		margin-top: 20px;
+		width: unset;
+	}
+	.footer-title{
+		align-self: center;
+	}
+	.footer-contact{
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+	}
+	.submit-button {
+		text-align: center;
+	}
+	.footer-container{
+		flex-direction: column;
+	}
+	.long-footer{
+		padding: 0;
+	}
+	.contact-us{
+		align-items: normal;
 	}
 }
