--- a/header.scss
+++ b/header.scss
@@ -7,6 +7,9 @@ body {
 	max-width: 1400px;
 	margin: 0 auto;
 }
+.hide{
+	display: none;
+}
 .header {
 	display: flex;
 	justify-content: space-between;
@@ -114,4 +117,82 @@ body {
 			height: 70px;
 		}
 	}
+}
+
+@media screen and (max-width: 700px){
+	.header-logo img {
+		height: 55px;
+	}
+	.header-nav-wrap{
+		position: absolute;
+		left: -100%;
+		transition: 0.3s;
+		top: 59px;
+		&.visible{
+			left: 0;
+		}
+	}
+	.nav-menu{
+		position: absolute;
+		background: #ffffff;
+		display: flex;
+		flex-direction: column;
+		width: 100%;
+		z-index: 4;
+	}
+	.nav-list{
+		flex-direction: column;
+	}
+	.nav-item{
+		height: unset;
+	}
+	.nav-link{
+		padding: 15px 40px;
+		color: #000000;
+		font-weight: normal;
+		border-bottom: 3px #14b5f0 solid;
+
+	}
+	.header .menu__icon {
+		display: block;
+		position: absolute;
+		width: 25px;
+		height: 18px;
+		cursor: pointer;
+		z-index: 5;
+		top: 20px;
+		left: 10px;
+		span {
+			position: absolute;
+			width: 100%;
+			height: 2px;
+			background-color: #ffffff;
+			top: 8px;
+			&:nth-child(n) {
+				transition: all 0.2s ease-out;
+			}
+			&:first-child {
+				top: 0;
+			}
+			&:last-child {
+				top: auto;
+				bottom: 0;
+			}
+		}
+
+		&.clicked {
+			:nth-child(2) {
+				opacity: 0;
+			}
+			:nth-child(1) {
+				transform: rotate(45deg);
+				top: 8px;
+			}
+			:nth-child(3) {
+				transform: rotateZ(-45deg);
+				top: 8px;
+			}
+		}
+	}
+
 }
