--- a/profile.scss
+++ b/profile.scss
@@ -58,7 +58,7 @@ a {
 	height: 100vh;
 	background-color: var(--first-color);
 	padding: 1.25rem 0.5rem 2rem;
-	z-index: var(--z-fixed);
+	z-index: 2;
 }
 
 .nav {
@@ -119,7 +119,7 @@ a {
 	}
 }
 .show {
-	width: $nav-width + 112px;
+	width: $nav-width +  $nav-width + 112px;
 }
 .rotate {
 	transform: rotate(180deg);
@@ -133,8 +133,7 @@ a {
 	color: var(--first-color);
 }
 .setting {
-	margin-top: 5%;
-	margin-left: 10%;
+	margin: 55px 5px;
 	&-title{
 		margin: 15px 5px;
 		font-size: 18px;
@@ -142,4 +141,42 @@ a {
 	&-form {
 		box-shadow: rgba(0, 0, 0, 0.2) 0px 3px 3px -2px, rgba(0, 0, 0, 0.14) 0px 3px 4px 0px, rgba(0, 0, 0, 0.12) 0px 1px 8px 0px;
 	}
+}
+@media screen and (max-width: 700px) {
+	body{
+		padding: 0;
+	}
+	.header{
+		position: relative;
+		z-index: 12;
+	}
+	.nav__toggle{
+		display: none;
+	}
+	.l-navbar{
+		left: -56px;
+		transition: 0.2s;
+	}
+	.show {
+		left: 0;
+
+	}
+	#body .header .menu__icon{
+		left: 15px;
+		top: 15px;
+		transition: 0.2s;
+		& span {
+			background-color: #000000 ;
+		}
+		&.clicked{
+			left: 190px;
+			& span {
+				background-color: #ffffff ;
+			}
+		}
+	}
+	.nav__logo{
+		margin: 10px 0;
+	}
+
 }
