--- a/css/calculator.css
+++ b/css/calculator.css
@@ -875,6 +875,15 @@
 .pack__label{
 	font-size: 14px;
 }
+.pack__counter{
+	display: none;
+	position: absolute;
+	line-height: 24px;
+	right: 5px;
+}
+.pack__counter::before{
+	content: '/';
+}
 .table__column{
 	width: 150px;
 	font-size: 14px;
